--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Leticia\\Downloads\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.0\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
+file.reference.rs2xml.jar=C:\\Users\\Leticia\\Downloads\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -36,7 +37,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${libs.beans-binding.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
